--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2018"
 
 [dependencies]
 serde_json = "1.0"
+sha2 = "0.9.5"
+base64 = "0.13.0"
 serde = {  version="1.0", features=["derive"]}
