--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2018"
 serde_json = "1.0"
 sha2 = "0.9.5"
 base64 = "0.13.0"
+path-clean = "0.1.0"
 serde = {  version="1.0", features=["derive"]}
