--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ serde_json = "1.0"
 sha2 = "0.9.5"
 base64 = "0.13.0"
 path-clean = "0.1.0"
+getopts = "0.2.21"
 serde = {  version="1.0", features=["derive"]}
